kubernetes/apps/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/service.serversscheme: https

spec:
  ingressClassName: traefik

  rules:
    - host: argocd.codeserver.moabdullahi.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443

  tls:
    - secretName: argocd-tls
      hosts:
        - argocd.codeserver.moabdullahi.uk
